force-app/main/default/objects/Social_Media_Source__mdt/Social_Media_Source__mdt.object-meta.xml
<CustomObject>
    <label>Social Media Source</label>
    <pluralLabel>Social Media Sources</pluralLabel>
</CustomObject>