force-app/main/default/objects/Social_Media_Source__mdt/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <label>Program Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>