force-app/main/default/objects/Social_Media_Source__mdt/fields/Send_to_conso__c.field-meta.xml
<CustomField>
    <fullName>Send_to_conso__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send to conso</label>
    <type>Checkbox</type>
</CustomField>