force-app/main/default/objects/Social_Media_Source__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WeChat</fullName>
                <default>true</default>
                <label>WeChat</label>
            </value>
            <value>
                <fullName>Kakao</fullName>
            </value>
            <value>
                <fullName>Line</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>